@@ -1,3 +1,7 @@
+[B]Version 2.7.9[/B]
+
+- fixed incorrect directory total for some searches
+
 [B]Version 2.7.8[/B]
 
 - Updated hulu search with speed improvements
